[FEAT] migliorie al css e aggiunta di commenti esplicativi al codice

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
+
+  <!-- Div principale dove React monterà la Single Page Application -->
   <div id="root"></div>
+
+  <!-- Script principale dell'app, punta al file di ingresso React (main.jsx) -->
   <script type="module" src="/src/main.jsx"></script>
+
 </body>
 
 </html>
